# mxboot

./: Cargo.toml  README.md
.cargo/: config.toml
config/: lv_conf.h  lv_drv_conf.h
include/: lv_conf.h
src/: fb.rs  main.rs
src/video/: contains.rs  fb.rs  gui.rs  init.rs  mock_init.rs  mod.rs  term_ui.rs  theme.rs
