[package]
name = "mxboot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.38"
embedded-graphics = "0.7.1"
lvgl = { git = "https://github.com/nia-e/lvgl-rs.git" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
syscalls = { version = "0.6.7", features = ["aarch64"], default-features = false }
framebuffer = "0.3.1"

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
embedded-graphics-simulator = "0.4.0"
