[package]
name = "mxboot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.38"
embedded-graphics = "0.7.1"
lvgl = { git = "https://github.com/rafaelcaricio/lvgl-rs", default-features = false, features = ["drivers", "alloc"]}
lvgl-sys = { git = "https://github.com/rafaelcaricio/lvgl-rs" }
cstr_core = "0.2.6"

[target.'cfg(target_arch = "aarch64")'.dependencies]
syscalls = { version = "0.6.7", features = ["aarch64"], default-features = false }
framebuffer = "0.3.1"
